# perf_libs

./: CMakeLists.txt  README.md  test_results.txt
include/: multicast_ringbuff.hpp  perf_utils.hpp  seqlock.hpp  uninitialized_storage.hpp
perf_tuning/: cpu_freq.txt  disable_hwprefetch.sh  huge_page.sh  nanoBench.sh  perf_stats_result_showing_cache_coherence_traffic.txt  vulnerability_mitigations.sh
src/: multicast_ringbuff.hpp  multicast_ringbuff_unittest.cpp  perf_test.hpp  perf_test_concurrent_queues.cpp  perf_utils.hpp  seqlock.hpp  test_results.txt  uninitialized_storage.hpp
src/external_for_bench/folly/: ProducerConsumerQueue.h
src/perf_tuning/: perf_notes.txt  perf_tune.sh
